dctrl-tools (2.21) unstable; urgency=low

  * grep-dctrl: Remove the old dead annoying banner code.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 18 Dec 2011 20:16:49 +0200

dctrl-tools (2.20.1) unstable; urgency=low

  [ Antti-Juhani Kaijanaho ]
  * Handle multiple instances of the same field gracefully.  No string changes.
    Closes: #652034 (reported by myself)

  [ David Prévot ]
  * Man pages order in SEE ALSO, thanks to Chris Leick (closes: #651219).
  * Consistently avoid use of CS vocabulary.
  * Keep previous msgids of translated messages.
  * Handle two missing translatable strings.
  * Use of Policy compliant relations.
  * Runtime strings review by Justin B Rye.

  [ Program translations ]
  * Catalan, by Jordi Mallach (closes: #652083).
  * English – United Kingdom, by Jeff Bailes.
  * French, by David Prévot.
  * German, by Gerfried Fuchs.
  * Spanish, by Javier Fernández-Sanguino (closes: #651409).
  * Russian, by Yuri Kozlov (closes: #651444).
  * Finnish, by Antti-Juhani Kaijanaho.

  [ Documentation translations ]
  * French, by David Prévot.
  * German, by Chris Leick (closes: #651218, #651706).

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 18 Dec 2011 19:30:36 +0200

dctrl-tools (2.20) unstable; urgency=low

  * Improve the testsuite.
  * tester.sh: Do not output .differr if it wasn't constructed.
  * grep-dctrl: Make a more modest fix for #525525 in adding an --ensure-dctrl
    option that makes sure that the output (in the absence of the -n switch)
    is in dctrl format.
    - Later on we may want to make --ensure-dctrl the default.  In anticipation,
      a --compat option has been added that countermands any --ensure-dctrl.
  * grep-dctrl: With -c, output even a zero count and exit successfully.
    Closes: #641255 (grep-dctrl -c does not print out 0 when it should)
    [ Reported by Antti-Juhani Kaijanaho <ajk@debian.org> ]

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 27 Nov 2011 21:23:53 +0200
