@@ -5,7 +5,7 @@ Wichert Akkerman, Ian Jackson and Lars Wirzenius.
 Copyright:
 
      Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
-                   2009, 2010
+                   2009, 2010, 2011
                    Antti-Juhani Kaijanaho
   
      This program is free software; you can redistribute it and/or modify
@@ -26,8 +26,7 @@ Copyright:
 In Debian systems, the GNU GPL version 2 is available at
 /usr/share/common-licenses/GPL .
 
-The files getaline.c and fnutil.c are covered by the following
-copyright:
+The file fnutil.c are covered by the following copyright:
 
    Copyright (c) 1994 Lars Wirzenius.  All rights reserved.
    Copyright (C) 2004 Antti-Juhani Kaijanaho.  All rights reserved.
