@@ -1,0 +1,8 @@
+#!/bin/sh
+
+set -e
+
+dpkg-maintscript-helper rm_conffile \
+    /etc/grep-dctrl.rc 2.20.1 dctrl-tools -- "$@"
+
+#DEBHELPER#
