@@ -1,29 +1,0 @@
-# Configuration for grep-dctrl.  The config line format is
-# line-oriented.  Each line defines one executable name - default
-# input file pair; the elements of the pair are in order and separated
-# by whitespace.  The hash '#' begins a comment that lasts to the end
-# of line.  Empty lines are ignored.
-
-# There is some magic in the  default input file name field.
-# If it starts with
-#  @exec, the rest of the name is given to /bin/sh -c and its stdout is 
-#         used as input, if no explicit file name is given on the command
-#         line
-# A double @ at the start of the field denotes a single @ in the actual 
-# name.
-
-# Template:
-#   <executable name>   <default input file name>
-
-# The following line used to be required, but it is now hardcoded.
-# grep-dctrl      -
-
-# The following two pairs define common aliases for grep-dctrl.
-grep-status     /var/lib/dpkg/status
-grep-available  /var/lib/dpkg/available
-
-# A new feature: grepping apt's available information
-grep-aptavail	@exec apt-cache dumpavail
-
-# A new feature: grepping debtags' information
-grep-debtags    @exec debtags dumpavail
