@@ -1,8 +1,11 @@
 dctrl-tools (2.21) unstable; urgency=low
 
   * grep-dctrl: Remove the old dead annoying banner code.
+  * grep-dctrl: Hardcode default input file names.
+      - The /etc/grep-dctrl.rc conffile is removed upon package upgrade.
+      - grep-dctrl.1.cp: Updated to match.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 18 Dec 2011 20:16:49 +0200
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 18 Dec 2011 21:04:25 +0200
 
 dctrl-tools (2.20.1) unstable; urgency=low
 
